<resources>
    <string name="app_name">Ball3activity</string>
    <string name="regisration">Ball3activity: Registration</string>
    <string name="passord">Password</string>
    <string name="confirmPassord">Confirm password</string>
    <string name="login">Login</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="hit_the_target">0</string>

    <string-array name="ListMainMenu">
        <item>Старт</item>
        <item>Статистика</item>
        <item>Мой результат</item>
        <item>Выйти из аккаунта</item>
    </string-array>
</resources>


