<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.roman.ball3activityv3.RegistrationActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRegistr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/regisration"
        app:titleTextColor="@color/background" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegistr">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editLoginReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/editFirstNameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editLastNameReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editPassReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/passord"
                android:inputType="textPersonName|textPassword"
                android:password="true"
                android:singleLine="false" />

            <EditText
                android:id="@+id/editPassConfirmReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirmPassord"
                android:inputType="textPersonName"
                android:password="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/RegisterReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:onClick="onClickRegistration"
                android:text="Register"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="421dp"
                android:layout_marginBottom="32dp"/>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
